# nelhage-sandbox

./: .gitignore  CLAUDE.md  README.md  flake.nix
claude-docker/: Dockerfile
content/post/: computers-can-be-understood.markdown
ipython-kernels/: main.py  pyproject.toml
jsbugs/: ANALYSIS.md  README.md  enrich_fixes.py  fetch_sample.py  fixes_unresolved.txt  posts.jsonl  scrape.py  v8_bugs.csv  v8_bugs.jsonl  v8_bugs_with_fixes.csv  v8_bugs_with_fixes.jsonl
jsbugs/sample_patches/: 01_CVE-2021-37985_cl3149456.patch  02_CVE-2025-12727_cl7079806.patch  03_CVE-2026-5873_cl7702193.patch  04_CVE-2024-12695_cl6092869.patch  05_CVE-2025-0998_cl6231554.patch  06_CVE-2025-2137_cl6304942.patch  07_CVE-2025-13226_cl6973586.patch  08_CVE-2025-13224_cl7036691.patch  09_CVE-2021-30551_cl2940889.patch  10_CVE-2022-3885_cl3982115.patch  index.json
lean/: .envrc  Hillel.lean  Vect.lean  hello.lean  main.lean
lean/VectExercises/: Main.lean  README.md  VectExercises.lean  lake-manifest.json  lakefile.toml
mnist-subliminal/: mnist.py  pyproject.toml
pypy/: .envrc  .gitignore  README.md  bench_util.js  benchmark.js  benchmark.py  benchmark_mono.js  benchmark_mono.py  benchmark_nansum.js  benchmark_nansum.py  benchmark_poly.js  benchmark_poly.py  benchmark_sentinel.js  benchmark_sentinel.py  make_report.py  report.html  run_benchmark.sh  sum_floats.js  sum_floats.py  summands.js  summands.py  sums.js  sums.py  sweep_nansum.js  sweep_nansum.py  sweep_sentinel.js  sweep_sentinel.py
pypy/c/: sums.c  (+11 more)
regexle/: .envrc  .gitignore  main.py  pyproject.toml
regexle/src/regexle/: __init__.py  main.py  mappers.py  z3_re.py
satoshi/: .gitignore  README.md  pyproject.toml
satoshi/src/satoshi/: __init__.py  __main__.py  analysis.py  db.py  embed.py  fetch.py  normalize.py  parse.py
scripts/: with-direnv
sts2-log/: .envrc  .gitignore  README.md  generate.mjs  style.css  tip.js
verso2docset/: .envrc  convert.py  pyproject.toml
(+1 files in other folders)
