[project]
name = "satoshi"
version = "0.1.0"
description = "Data analysis project"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "lxml>=6.0.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "python-dateutil>=2.9.0.post0",
    "tqdm>=4.67.3",
    "voyageai>=0.3.7",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
jupyter = [
    "ipykernel>=7.2.0",
]
